Use thread flock to implement a closeable structured arena